[tool.poetry]
name = "twitchrce"
version = "0.1.0"
description = "Twitch chat bot that allows RCE on broadcasters machine."
authors = ["MSec <mich@elwarner.co.uk>"]
readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.12"
python-decouple = "^3.8"
colorama = "^0.4.6"
black = "^24.10.0"
nest-asyncio = "^1.6.0"
boto3 = "^1.35.50"
twitchio = "^2.10.0"
vt-py = "^0.18.4"
pytest-responses = "^0.5.1"

[tool.poetry.group.dev.dependencies]
setuptools = "^75.2.0"
pytest = "^8.3.3"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.24.0"
coverage = "^7.6.4"
black = "^24.10.0"
isort = "^5.13.2"
six = "^1.16.0"
moto = "^5.0.18"

[tool.isort]
profile = "black"